--- a/index.html
+++ b/index.html
@@ -78,13 +78,29 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
     </div>
 
     <div  class="outline">
+    <h2>Bio</h2>
     <p>
-	I'm an assistant professor of School of Computing, National 
-	University of Singapore. 
+      I am an assistant professor at
+      the <a href="http://www.comp.nus.edu.sg">School of Computing</a>,
+      <a href="http://www.nus.edu.sg">National University of
+      Singapore</a>.  I'm a member of
+      the <a href="http://compsec.comp.nus.edu.sg">Cyber-Security
+      Research Group</a>.<br><br>
 
-      	My research interests include system security, web
-      	security, mobile security, program analysis, and 
-        software debugging and testing.
+      My main research interest is in system and software security,
+      web security, mobile security, and software testing.  As a
+      co-author, I received the ACM SIGSOFT Distinguished Paper Award
+      at ESEC/FSE in 2009, the Best Paper Award at USENIX Security
+      Symposium in 2007, and the Outstanding Paper Award at the Annual
+      Computer Security Applications Conference (ACSAC) in 2003.  I
+      also received the Young Investigator Award of National
+      University of Singapore in 2008.  I got my Ph.D. degree in
+      <a href="http://www.cs.stonybrook.edu">Computer Science</a> from
+      <a href="http://www.stonybrook.edu">Stony Brook University</a>
+      in 2006, and B.S. in <a href="http://eecs.pku.edu.cn">Computer
+      Science and <a href="http://www.ccer.edu.cn">Economics</ from
+      Peking University in 1999.
+
     </p>
   
     <h2>Selected Publications <a href="publications.html" class="btn">Full List</a></h2>
@@ -92,7 +108,7 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 <ul>
   <li><span style="font-weight: bold;">
 Codejail: Application-transparent Isolation of Libraries with Tight Program
-Interactions.</span>[<a href="papers/esorics12.pdf">PDF</a>]<br>
+Interactions.</span> [<a href="papers/esorics12.pdf">PDF</a>]<br>
     Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai
 Liang. <br>
 In <span style="font-style: italic;">the 17th European Symposium on Research in Computer
