--- a/publications.html
+++ b/publications.html
@@ -208,7 +208,7 @@ Saint-Malo</span>, France, September 2009.</font></font><br>
 Debugging Evolving Programs. </span><font color="#800000"><font
  color="#000000"><strong></strong></font></font>[<a
  href="papers/fse09.pdf">PDF</a>]<br>
-    <b style="color: rgb(255, 0, 0);">(Distinguished
+    <b style="color: #A30000">(Distinguished
 paper award)<br>
     </b>Dawei Qi,
 Abhik Roychoudhury,
@@ -261,7 +261,7 @@ Security
   <li><b>Towards Automatic Discovery of Deviations in Binary
 Implementations with Applications to Error Detection and Fingerprint
 Generation</b>. [<a href="papers/sec07.pdf">PDF</a>]<br>
-    <b style="color: rgb(255, 0, 0);">(Best
+    <b style="color: #A30000">(Best
 paper award)</b><br>
 David Brumley, Juan Caballero, Zhenkai Liang, James Newsome, and Dawn
 Song.<br>
@@ -304,7 +304,7 @@ Symposium
   <li><b>Isolated Program Execution: An Application Transparent
 Approach for Executing Untrusted Programs</b>. [<a
  href="papers/acsac03.pdf">PDF</a>]<br>
-    <b style="color: rgb(255, 0, 0);">(Outstanding
+    <b style="color: #A30000">(Outstanding
 paper award)</b><br>
 Zhenkai Liang, V.N. Venkatakrishnan, and R. Sekar.<br>
 In <i>the 19th Annual Computer Security Applications Conference (ACSAC)</i>,
