--- a/research.html
+++ b/research.html
@@ -59,12 +59,39 @@ National University of Singapore<br>
 </ul>
 
 <h2>Current Students</h2>
-
+<table cellpadding="0" cellspacing="0" align="center" width="100%">
+  <tbody>
+    <tr><td><a href="http://www.comp.nus.edu.sg/~xdong/">DONG
+    Xinshu</a> (Ph.D.)</tr></td>
+    <tr><td><a href="http://www.comp.nus.edu.sg/~patilkr/">Kailas
+    PATIL</a> (Ph.D.)</tr></td>
+    <tr><td><a href="http://www.comp.nus.edu.sg/~dawei/">QI Dawei
+    </a> (Ph.D. co-advise)</tr></td>
+    <tr><td><a href="http://www.comp.nus.edu.sg/~xiaolei/">LI
+    Xiaolei</a> (Ph.D.)</tr></td>
+    <tr><td><a href="http://www.comp.nus.edu.sg/~g0900386/">DAI
+    Ting</a> (Ph.D. co-advise)</tr></td>
+    <tr><td><a href="http://www.comp.nus.edu.sg/~huhong/">HU Hong</a> (Ph.D.)</tr></td>
+    <tr><td><a href="http://www.comp.nus.edu.sg/~bodhi/">Bodhisatta
+    Barman ROY</a> (Ph.D.)</tr></td>
+    <tr><td><a href="http://www.comp.nus.edu.sg/~a0091939/">BAI
+    Guangdong</a> (Ph.D. co-advise)</tr></td>
+    <tr><td><a href="http://www.comp.nus.edu.sg/~jiayaoqi/">JIA
+    Yaoqi</a> (Ph.D.)</tr></td>
+    <tr><td>ZHANG Mingwei (Master)</td></tr>
+  </tbody>
+</table>
 <h2>Graduated Students</h2>
+<table cellpadding="0" cellspacing="0" align="center" width="100%">
+  <tbody>
+    <tr><td>GOH Zhengheng, Master, (CSIT)</tr></td>
+    <tr><td>Sai SATHYANARAYAN, Master, (Citibank Singapore)</tr></td>
+  </tbody>
+</table>
+
   </div>
 </div>
 <!-- MAIN CONTENT ENDS HERE -->
-
 </div>
 </div>
 </body>
