--- a/teaching.html
+++ b/teaching.html
@@ -51,22 +51,19 @@ National University of Singapore<br>
     <div  class="outline">
 
 <h2>Teaching</h2>
+
 <ul>
-  <li>AY 2008/2009 Semester 1: CS3235 Introduction to
-Computer Security</li>
-  <li>AY 2008/2009 Semester 2: CS6230 Topics in
-Information
-Security</li>
-  <li>AY 2009/2010 Semester 1: CS5231 Cryptographic Techniques &amp;
-Data Security</li>
-  <li>AY 2009/2010 Semester 2: CS3235 Introduction to Computer Security<br>
-  </li>
-  <li>AY 2010/2011 Semester 1: CS5231 Systems Security<br>
-  </li>
-  <li>AY 2010/2011 Semester 2: CS3235 Introduction to Computer Security<br>
-  </li>
-  <li>AY 2011/2012 Semester 1: CS4238 Computer Security Practice</li>
-  <li>AY 2011/2012 Semester 2: CS5231 Systems Security</li>
+  <li> CS3235 (Introduction to Computer Security)</li>
+  AY 2008/2009 Semester 1, AY 2009/2010 Semester 2, AY 2010/2011 Semester 2.
+  <li>CS6230 (Topics in Information Security</li>
+  AY 2008/2009 Semester 2.
+  <li>CS5231 (Cryptographic Techniques &amp; Data Security)</li> AY
+  2009/2010 Semester 1.
+  <li>CS5231 (Systems Security)</li>
+  AY 2010/2011 Semester 1, AY 2011/2012 Semester 2, AY 2012/2013
+  Semester 2. 
+  <li>CS4238 (Computer Security Practice)</li>
+  AY 2011/2012 Semester 1, AY 2012/2013 Semester 1. 
 </ul>
 
   </div>
