--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
   <div class="leftsidebar">
     <div class="box" width="90%">
       
-      <h2 style="text-align:center">News</h2>
+      <h2 style="text-align:center" class="btn">News and
+      Announcements</h2>
+
+<table cellpadding="2" cellspacing="3" align="center" width="100%">
+  <tbody>
+    <tr><td>Papers appeared at NDSS 2013</td></tr>
+    <tr><td>BuzzCity-SOC <a href="http://www.comp.nus.edu.sg/~clickfrd/">Clicks Fraud Detection Challenge 2012</a> </td></tr>
+    <tr><td>Kaspersky Academy <a href="http://www.kaspersky.com/about/events/educational-events/Asia_Pacific_MEA_Round_2013">"CyberSecurity for the Next Generation"</a> Asia-Pacific &amp; MEA Round 2013 </td></tr>
+</tbody>
+</table>
 	<ul>
 	<li>Papers appeared at ICECCS 2013.</li>
 	<li>Papers appeared at ASIACCS 2013.</li>
@@ -98,8 +107,8 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
       <a href="http://www.cs.stonybrook.edu">Computer Science</a> from
       <a href="http://www.stonybrook.edu">Stony Brook University</a>
       in 2006, and B.S. in <a href="http://eecs.pku.edu.cn">Computer
-      Science and <a href="http://www.ccer.edu.cn">Economics</ from
-      Peking University in 1999.
+      Science and <a href="http://www.ccer.edu.cn">Economics</a> from
+      <a href="http://www.pku.edu.cn">Peking University</a> in 1999.
 
     </p>
   
@@ -203,6 +212,9 @@ December
 </ul>
 
   </div>
+    <table>
+      <tr><td></td></tr>
+    </table>
 </div>
 <!-- MAIN CONTENT ENDS HERE -->
 
