--- a/teaching.html
+++ b/teaching.html
@@ -15,15 +15,18 @@ lang="en" xml:lang="en">
 
 <div class="wrap">
   <div class="left_col">
-    <img src="liangzk.jpg" width="100%" title="@PKU">
-
-    <!-- <h2>LIANG Zhenkai</h2> -->
-
-Assistant Professor<br>
-Department of Computer Science<br>
-School of Computing<br>
-National University of Singapore<br>
-
+    <div class="box">
+      <center>
+	<table cellpadding="4" cellspacing="4" align="center" width="95%">
+	  <tbody>
+	    <tr><td><a href="index.html" class="navbtn">Home</a></td></tr>
+	    <tr><td><a href="publications.html" class="navbtn">Publications</a></td></tr>
+	    <tr><td><a href="research.html" class="navbtn">Research</a></td></tr>
+	    <tr><td><a href="teaching.html" class="navbtn">Teaching</a></td></tr>
+	  </tbody>
+	</table>
+      </center>
+    </div>
 
   </div>
     
@@ -32,22 +35,9 @@ National University of Singapore<br>
 
   <div class="mid_col">
 
-<div class="box" width="80%" >
-  <center>
-<table cellpadding="4" cellspacing="4" align="center" width="95%">
-  <tbody>
-    <tr>
-      <td width="25%"><a href="index.html" class="navbtn">Home</a></td>
-      <td width="25%"><a href="publications.html" class="navbtn">Publications</a></td>
-      <td width="25%"><a href="research.html" class="navbtn">Research</a></td>
-      <td width="25%"><a href="teaching.html" class="navbtn">Teaching</a></td>
-    </tr>
-</tbody>
-</table>
-</center>
-</div>
-
-
+    <table>
+      <tr><td></td></tr>
+    </table>
     <div  class="outline">
 
 <h2>Teaching</h2>
@@ -67,6 +57,9 @@ National University of Singapore<br>
 </ul>
 
   </div>
+    <table>
+      <tr><td></td></tr>
+    </table>
 </div>
 <!-- MAIN CONTENT ENDS HERE -->
 
