--- a/index.html
+++ b/index.html
@@ -52,15 +52,10 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 
 <table cellpadding="2" cellspacing="3" align="center" width="100%">
   <tbody>
-    <tr><td>Papers appeared at NDSS 2013</td></tr>
-    <tr><td>BuzzCity-SOC <a href="http://www.comp.nus.edu.sg/~clickfrd/">Clicks Fraud Detection Challenge 2012</a> </td></tr>
-    <tr><td>Kaspersky Academy <a href="http://www.kaspersky.com/about/events/educational-events/Asia_Pacific_MEA_Round_2013">"CyberSecurity for the Next Generation"</a> Asia-Pacific &amp; MEA Round 2013 </td></tr>
+    <tr><td>Papers accepted at ICECCS 2013</td></tr>
+    <tr><td>Papers accepted at ASICACCS 2013</td></tr>
 </tbody>
 </table>
-	<ul>
-	<li>Papers appeared at ICECCS 2013.</li>
-	<li>Papers appeared at ASIACCS 2013.</li>
-	</ul>
     </div>
   </div>
 
