--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 
 
   <div class="leftsidebar">
-    <div class="box" width="90%">
+    <div class="box">
       
       <h2 style="text-align:center" class="btn">News and
       Announcements</h2>
@@ -53,7 +53,7 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 <table cellpadding="2" cellspacing="3" align="center" width="100%">
   <tbody>
     <tr><td>Papers accepted at ICECCS 2013</td></tr>
-    <tr><td>Papers accepted at ASICACCS 2013</td></tr>
+    <tr><td>Papers accepted at ASIACCS 2013</td></tr>
 </tbody>
 </table>
     </div>
