--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ lang="en" xml:lang="en">
 
 <div class="wrap">
   <div class="left_col">
-    <img src="liangzk.jpg" width="100%" title="@PKU">
+    <img src="liangzk.jpg" width="100%" title="@PKU" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
+  #888; ">
 
     <!-- <h2>LIANG Zhenkai</h2> -->
 
