--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
       <a href="http://www.cs.stonybrook.edu">Computer Science</a> from
       <a href="http://www.stonybrook.edu">Stony Brook University</a>
       in 2006, and B.S. in <a href="http://eecs.pku.edu.cn">Computer
-      Science and <a href="http://www.ccer.edu.cn">Economics</a> from
+      Science</a> and <a href="http://www.ccer.edu.cn">Economics</a> from
       <a href="http://www.pku.edu.cn">Peking University</a> in 1999.
 
     </p>
