--- a/teaching.html
+++ b/teaching.html
@@ -45,7 +45,7 @@ lang="en" xml:lang="en">
 <ul>
   <li> CS3235 (Introduction to Computer Security)</li>
   AY 2008/2009 Semester 1, AY 2009/2010 Semester 2, AY 2010/2011 Semester 2.
-  <li>CS6230 (Topics in Information Security</li>
+  <li>CS6230 (Topics in Information Security)</li>
   AY 2008/2009 Semester 2.
   <li>CS5231 (Cryptographic Techniques &amp; Data Security)</li> AY
   2009/2010 Semester 1.
