--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -36,6 +36,9 @@ Singapore, 117417<br>
       <!-- MAIN CONTENT STARTS HERE -->
 
   <div class="mid_col">
+    <table>
+      <tr><td></td></tr>
+    </table>
 
     <div  class="outline">
     <p>
@@ -55,6 +58,10 @@ Singapore, 117417<br>
     <h2>Service</h2>
 
   </div>
+    <table>
+      <tr><td></td></tr>
+    </table>
+
 </div>
 <!-- MAIN CONTENT ENDS HERE -->
 
