--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -15,16 +15,13 @@ lang="en" xml:lang="en">
 
 <div class="wrap">
   <div class="left_col">
-    <img src="liangzk.jpg" width="100%" title="@PKU">
+    <img src="liangzk.jpg" width="100%" title=>
 
-    <!-- <h2>LIANG Zhenkai</h2> -->
-
-<p> Assistant Professor<br>
+<p style="color: #A30000"> Assistant Professor<br>
 School of Computing<br>
 National University of Singapore<br>
-</p>
-
-<p> Mailing address:<br>
+<br>
+Mailing address:<br>
 13 Computing Drive<br>
 Computing 1, #03-27<br>
 Singapore, 117417<br>
@@ -42,6 +39,8 @@ Singapore, 117417<br>
 
     <div  class="outline">
     <p>
+	Thanks for looking at my promotion and tenure documents. 
+
 	I'm an assistant professor of School of Computing, National 
 	University of Singapore. 
 
