--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -39,24 +39,61 @@ Singapore, 117417<br>
 
     <div  class="outline">
     <p>
-	Thanks for looking at my promotion and tenure documents. 
+	Thank you for taking your valuable time to look at my PnT (promotion and tenure) documents. 
 
-	I'm an assistant professor of School of Computing, National 
-	University of Singapore. 
-
-      	My research interests include system security, web
-      	security, mobile security, program analysis, and 
-        software debugging and testing.
-
-    </p>
-
+	This is a concise summary of my achievements in research, teaching, and service. If you have suggestions or need more specific information, please send me an email at liangzk@comp.nus.edu.sg. I greatly appreciate it. </p>
+    <p>&nbsp;</p>
+    <dl>
+      <dt>Research: </dt>
+      <dd>I created the system security research group in NUS School of Computing, and developed research in web and browser security, software component isolation, software debugging/testing, and mobile security. Now the system security research group has two faculty members and about 15 students and research assistants, with publications in top security and software engineering conferences, such as IEEE Security and Privacy, NDSS, ESORICS, and FSE.</dd>
+      <dt>Teaching:</dt>
+      <dd>I revampded two security courses (CS3235 and CS5231) and developed a new module from scratch (CS4238). </dd>
+      <dt>Service:</dt>
+      <dd>&nbsp;</dd>
+    </dl>
     <h2>Research</h2>
+    <p>After joining NUS in 2008, my research has been primarily focus on browser security, software debugging, and softare debugging/testing. </p>
+    <p>Major research achievements.</p>
+    <p>Isolation in browsers, rethink binary ioslation, program analysis</p>
+    <p>Representitive papers. </p>
+    <p>&nbsp;</p>
+    <p>Research awards. </p>
+    <p>Funding. </p>
+    <p>Service as committee members. </p>
 
     <h2>Teaching</h2>
+    <p>I have been taking a leading role in redesging the system security cirruculum. </p>
+<table width="719" height="145" border="1">
+  <tr>
+    <td width="82">Sememster</td>
+    <td width="74">Course</td>
+    <td width="44">Class Size</td>
+    <td width="129">Overall Student Rating</td>
+    <td width="138">Departmental Average</td>
+    <td width="212"><p>Detailed Report</p>
+      <p>&nbsp;</p></td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="27">&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+</table>
+<p>Graduated students</p>
+<h2>Service</h2>
 
-    <h2>Service</h2>
-
-  </div>
+    </div>
     <table>
       <tr><td></td></tr>
     </table>
