--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -17,7 +17,7 @@ lang="en" xml:lang="en">
   <div class="left_col">
     <img src="liangzk.jpg" width="100%" title=>
 
-<p style="color: #A30000"> Assistant Professor<br>
+<p style="color: #000000"> Assistant Professor<br>
 School of Computing<br>
 National University of Singapore<br>
 <br>
@@ -27,7 +27,7 @@ Computing 1, #03-27<br>
 Singapore, 117417<br>
 <br>
 
-  </div>
+</div>
 
     
       <!-- MAIN CONTENT STARTS HERE -->
@@ -41,14 +41,10 @@ Singapore, 117417<br>
     <p>
 	Thank you for taking your valuable time to look at my PnT (promotion and tenure) documents. 
 
-	This is a concise summary of my achievements in research, teaching, and service. If you have suggestions or need more specific information, please send me an email at liangzk@comp.nus.edu.sg. I greatly appreciate it. </p>
-    <p>&nbsp;</p>
+	This is a short summary of my achievements in research and teaching. If you have suggestions or need more specific information, please send me an email at liangzk@comp.nus.edu.sg. I greatly appreciate it. </p>
+    <p><em><strong>Research</strong></em>: I established the system security research group in NUS School of Computing, and developed research areas in web and browser security, binary componentisolation, software debugging/testing, and mobile security. My research has been supported by fundings of over S$1.8 million (S$1.2 million as PI), with publications in top security and software engineering conferences, such as IEEE Security and Privacy, NDSS, ESORICS, and ACM FSE. Now the system security research group has two main faculty members and about 15 students and research assistants. </p>
     <dl>
-      <dt>Research: </dt>
-      <dd>I created the system security research group in NUS School of Computing, and developed research in web and browser security, software component isolation, software debugging/testing, and mobile security. Now the system security research group has two faculty members and about 15 students and research assistants, with publications in top security and software engineering conferences, such as IEEE Security and Privacy, NDSS, ESORICS, and FSE.</dd>
-      <dt>Teaching:</dt>
-      <dd>I revampded two security courses (CS3235 and CS5231) and developed a new module from scratch (CS4238). </dd>
-      <dt>Service:</dt>
+      <dt><em><strong>Teaching</strong></em>: I revampded two security courses (CS3235 and CS5231) and developed a new module from scratch (CS4238). </dt>
       <dd>&nbsp;</dd>
     </dl>
     <h2>Research</h2>
