teaching and service summary

--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -41,10 +41,13 @@ Singapore, 117417<br>
     <p>
 	Thank you for taking your valuable time to look at my PnT (promotion and tenure) documents. 
 
-	This is a short summary of my achievements in research and teaching. If you have suggestions or need more specific information, please send me an email at liangzk@comp.nus.edu.sg. I greatly appreciate it. </p>
-    <p><em><strong>Research</strong></em>: I established the system security research group in NUS School of Computing, and developed research areas in web and browser security, binary componentisolation, software debugging/testing, and mobile security. My research has been supported by fundings of over S$1.8 million (S$1.2 million as PI), with publications in top security and software engineering conferences, such as IEEE Security and Privacy, NDSS, ESORICS, and ACM FSE. Now the system security research group has two main faculty members and about 15 students and research assistants. </p>
+	This is a short summary of my achievements in research, teaching, and service. If you have suggestions or need more specific information, please send me an email at liangzk@comp.nus.edu.sg. I greatly appreciate it. </p>
+    <p><em><strong>Research Summary</strong></em>: I established the system security research group in NUS School of Computing, and developed research areas in web and browser security, binary componentisolation, software debugging/testing, and mobile security. My research has been supported by fundings of over S$1.8 million (S$1.2 million as PI), with publications in top security and software engineering conferences, such as IEEE Security and Privacy, NDSS, ESORICS, and ACM FSE. Now the system security research group has expanded to a group with two main faculty members and 15 students and research assistants. I have graduated three Master students and one Ph.D. student. Another two Ph.D. students will finish their defense in summer of 2013. </p>
     <dl>
-      <dt><em><strong>Teaching</strong></em>: I revampded two security courses (CS3235 and CS5231) and developed a new module from scratch (CS4238). </dt>
+      <dt><em><strong>Teaching Summary</strong></em>: During the past five years, I redeveloped the contents of two security courses, CS3235 <em>Introduction to Computer Security</em> (Undergraduate) and CS5231 <em>Systems Security</em> (Graduate), and created a new course, CS4238 <em>Computer Security Practice</em> (Undergraduate). I introduced a new teaching methodolgy of combining practice in class instruction. My courses and teaching methodology are well received by students (4.5 out of 5 by student evaluation in recent semesters). I also helped to develop security contents in a few undergraduate courses. </dt>
+      </dl>
+    <p><em><strong>Service Summary</strong></em>: I have served as the TPC member of server conferences and workshops, including NDSS 2012 and WWW 2011. I'm also the editorial board member of IJSN. I have also served as the reviewer of a few top conference and journals, including ACM TISSEC, IEEE TDSC, etc. For local service, I have been a member of the Graduate Study (Admission) Committee of NUS School of Computing. I also maintain active connections with government agencies, research labs, and companies related to cyber security, and I am actively drive the effort to establish a platform for academia, government, and companies to collaborate to facilitate research and education in cyber security in Singapore. </p>
+    <dl>
       <dd>&nbsp;</dd>
     </dl>
     <h2>Research</h2>
@@ -87,7 +90,7 @@ Singapore, 117417<br>
   </tr>
 </table>
 <p>Graduated students</p>
-<h2>Service</h2>
+<h2>&nbsp;</h2>
 
     </div>
     <table>
