teaching and research

--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -50,18 +50,63 @@ Singapore, 117417<br>
     <dl>
       <dd>&nbsp;</dd>
     </dl>
-    <h2>Research</h2>
+    <h2>RESEARCH</h2>
     <p>After joining NUS in 2008, my research has been primarily focus on browser security, software debugging, and softare debugging/testing. </p>
-    <p>Major research achievements.</p>
+    <p>
+      <h3>Major research achievements.</h3>
+    </p>
     <p>Isolation in browsers, rethink binary ioslation, program analysis</p>
     <p>Representitive papers. </p>
+    <h4>Web and browser security</h4>
+    <ul>
+      <li><strong>AdSentry: Comprehensive and Flexible Confinement of JavaScript-based Advertisements</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/acsac11.pdf">PDF</a>]<br />
+        <strong>Xinshu Dong, Minh Tran, Zhenkai Liang, and Xuxian Jiang.</strong><br />
+        In <em>the 27th Annual Computer Security Applications Conference (ACSAC)</em>,  2011.</li>
+      <li><strong>Towards Fine-Grained Access Control in JavaScript Contexts</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/icdcs11.pdf">PDF</a>]<br />
+        <strong>Kailas Patil, Xinshu Dong, Xiaolei Li, Zhenkai Liang, and Xuxian Jiang.</strong><br />
+        In <em>the 31st IEEE International Conference on Distributed Computing Systems (ICDCS)</em>,  2011.</li>
+    </ul>
+<h4>Binary and system security</h4>
+<ul>
+  <li><strong>Codejail: Application-transparent Isolation of Libraries with Tight Program Interactions</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/esorics12.pdf">PDF</a>]<br />
+    <strong>Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai Liang.</strong> <br />
+    In the 17th European Symposium on Research in Computer Security (ESORICS), 2012.</li>
+  <li><strong>A Framework to Eliminate Backdoors from Response Computable Authentication</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ieee12.pdf">PDF</a>]<br />
+    <strong>Shuaifu Dai, Tao Wei, Chao Zhang, Tielei Wang, Yu Ding, Zhenkai Liang, and Wei Zou. </strong><br />
+    In the IEEE Symposium on Security and Privacy, 2012.</li>
+  <li><strong>Identifying and Analyzing Pointer Misuses for Sophisticated Memory-corruption Exploit Diagnosis</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ndss12.pdf">PDF</a>]<br />
+    Mingwei Zhang, Aravind Prakash, Xiaolei Li, Zhenkai Liang, and Heng Yin.<br />
+    In the 19th Annual Network &amp; Distributed System Security Symposium (NDSS), 2012.</li>
+  <li><strong>Fast and Automated Generation of Attack Signatures: A Basis for Building Self-Protecting Servers</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ccs05.pdf">PDF</a>]<br />
+    Zhenkai Liang and R. Sekar.<br />
+    In <em>the </em><em>12th ACM Conference on Computer and Communications Security (CCS)</em>, 2005.</li>
+  <li><strong>Isolated Program Execution: An Application Transparent Approach for Executing Untrusted Programs</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/acsac03.pdf">PDF</a>]<br />
+    <strong>(Outstanding paper award)</strong><br />
+    Zhenkai Liang, V.N. Venkatakrishnan, and R. Sekar.<br />
+    In <em>the 19th Annual Computer Security Applications Conference (ACSAC)</em>, 2003.    </li>
+</ul>
+<h4>Software debugging and testing</h4>
+<ul>
+  <li><strong>DARWIN: An Approach for Debugging Evolving Programs</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/fse09.pdf">PDF</a>]<br />
+    <strong>(Distinguished paper award)<br />
+    </strong>Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, Kapil Vaswani.<br />
+    In <em>the ESEC and ACM SIGSOFT Symposium on the Foundations of Software Engineering (ESEC-FSE</em>), 2009.</li>
+  <li><strong>Towards Automatic Discovery of Deviations in Binary Implementations with Applications to Error Detection and Fingerprint Generation</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/sec07.pdf">PDF</a>]<br />
+    <strong>(Best paper award)</strong><br />
+    David Brumley, Juan Caballero, Zhenkai Liang, James Newsome, and Dawn Song.<br />
+    In <em>the 16th USENIX Security Symposium</em>, 2007.</li>
+</ul>
+    <p>
+      <h3>Research awards. </h3>
+  </p>
+    <p>
+      <h3>Funding. </h3>
+    </p>
     <p>&nbsp;</p>
-    <p>Research awards. </p>
-    <p>Funding. </p>
-    <p>Service as committee members. </p>
 
-    <h2>Teaching</h2>
+    <h2>TEACHING</h2>
     <p>I have been taking a leading role in redesging the system security cirruculum. </p>
+    <p>Selected courses taught: </p>
 <table width="719" height="145" border="1">
   <tr>
     <td width="82">Sememster</td>
@@ -73,24 +118,43 @@ Singapore, 117417<br>
       <p>&nbsp;</p></td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td>2008/2009 Semester 2 (Spring)</td>
+    <td>CS6230</td>
+    <td>10</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
   </tr>
   <tr>
-    <td height="27">&nbsp;</td>
+    <td height="27">2009/2010 Semester 1 (Fall)</td>
+    <td>CS3235</td>
+    <td>87</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="27">2011/2012 Semester 2 (Spring)</td>
+    <td>CS5231</td>
+    <td>80</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="27"><p>2012/2013 Semester 1 (Fall)</p></td>
+    <td>CS4238</td>
+    <td>38</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
   </tr>
 </table>
-<p>Graduated students</p>
-<h2>&nbsp;</h2>
+<h3>Graduated students</h3>
+<p>Master Students.</p>
+<p>Ph.D. Students. </p>
+<h2>SERVICE</h2>
+<h3>Service as committee members. </h3>
 
     </div>
     <table>
