--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -42,11 +42,11 @@ Singapore, 117417<br>
 	Thank you for taking your valuable time to look at my PnT (promotion and tenure) documents. 
 
 	This is a short summary of my achievements in research, teaching, and service. If you have suggestions or need more specific information, please send me an email at liangzk@comp.nus.edu.sg. I greatly appreciate it. </p>
-    <p><em><strong>Research Summary</strong></em>: I established the system security research group in NUS School of Computing, and developed research areas in web and browser security, binary componentisolation, software debugging/testing, and mobile security. My research has been supported by fundings of over S$1.8 million (S$1.2 million as PI), with publications in top security and software engineering conferences, such as IEEE Security and Privacy, NDSS, ESORICS, and ACM FSE. Now the system security research group has expanded to a group with two main faculty members and 15 students and research assistants. I have graduated three Master students and one Ph.D. student. Another two Ph.D. students will finish their defense in summer of 2013. </p>
+    <p><em><strong>Research Summary</strong></em>: I established the system security research group in NUS School of Computing, and developed research areas in web and browser security, binary componentisolation, software debugging/testing, and mobile security. My research has been supported by fundings of over S$1.8 million (S$1.2 million as PI), with publications in top security and software engineering conferences and journals, such as IEEE Security and Privacy, NDSS, ESORICS, ACM FSE, ACM TISSEC, and ACM TOSEM. Now the system security research group has expanded to a group with two main faculty members and 15 students and research assistants. I have graduated three Master students and one Ph.D. student. Another two Ph.D. students will finish their defense in summer of 2013. </p>
     <dl>
       <dt><em><strong>Teaching Summary</strong></em>: During the past five years, I redeveloped the contents of two security courses, CS3235 <em>Introduction to Computer Security</em> (Undergraduate) and CS5231 <em>Systems Security</em> (Graduate), and created a new course, CS4238 <em>Computer Security Practice</em> (Undergraduate). I introduced a new teaching methodolgy of combining practice in class instruction. My courses and teaching methodology are well received by students (4.5 out of 5 by student evaluation in recent semesters). I also helped to develop security contents in a few undergraduate courses. </dt>
       </dl>
-    <p><em><strong>Service Summary</strong></em>: I have served as the TPC member of server conferences and workshops, including NDSS 2012 and WWW 2011. I'm also the editorial board member of IJSN. I have also served as the reviewer of a few top conference and journals, including ACM TISSEC, IEEE TDSC, etc. For local service, I have been a member of the Graduate Study (Admission) Committee of NUS School of Computing. I also maintain active connections with government agencies, research labs, and companies related to cyber security, and I am actively drive the effort to establish a platform for academia, government, and companies to collaborate to facilitate research and education in cyber security in Singapore. </p>
+    <p><em><strong>Service Summary</strong></em>: I have served as the TPC member of server conferences and workshops, including WWW 2011 and NDSS 2013. I'm also the editorial board member of IJSN. I have served as the reviewer of a few major conference and journals, including ACM TISSEC, IEEE TDSC, etc. For university services, I have been a member of the Graduate Study (Admission) Committee of NUS School of Computing. I have been maintaining active connections with Singapore's government agencies, research labs, and companies related to cyber security. I am actively driving the effort to establish a platform for academia, government, and companies to collaborate to facilitate research and education of cyber security in Singapore. </p>
     <dl>
       <dd>&nbsp;</dd>
     </dl>
@@ -56,9 +56,39 @@ Singapore, 117417<br>
       <h3>Major research achievements.</h3>
     </p>
     <p>Isolation in browsers, rethink binary ioslation, program analysis</p>
-    <p>Representitive papers. </p>
-    <h4>Web and browser security</h4>
+    <h3>Representitive papers. </h3>
+    <h4>Software Isolation</h4>
     <ul>
+      <li><strong>Codejail: Application-transparent Isolation of Libraries with Tight Program Interactions</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/esorics12.pdf">PDF</a>]<br />
+        <strong>Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai Liang.</strong> <br />
+        In the 17th European Symposium on Research in Computer Security (ESORICS), 2012.</li>
+      <li><strong>A Framework to Eliminate Backdoors from Response Computable Authentication</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ieee12.pdf">PDF</a>]<br />
+        <strong>Shuaifu Dai, Tao Wei, Chao Zhang, Tielei Wang, Yu Ding, Zhenkai Liang, and Wei Zou. </strong><br />
+        In the IEEE Symposium on Security and Privacy, 2012.</li>
+      <li><strong>Alcatraz: An Isolated Environment for Experimenting with Untrusted Software</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/tissec09.pdf">PDF</a>]<br />
+        <strong>Zhenkai Liang, Weiqing Sun, R.Sekar, and V.N. Venkatakrishnan.</strong><br />
+        In ACM Transactions on Information and System Security (TISSEC), Volume 12, Issue 3, January 2009. </li>
+      <li><strong>Isolated Program Execution: An Application Transparent Approach for Executing Untrusted Programs</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/acsac03.pdf">PDF</a>]<br />
+        <strong>(Outstanding paper award)</strong><br />
+        Zhenkai Liang, V.N. Venkatakrishnan, and R. Sekar.<br />
+        In <em>the 19th Annual Computer Security Applications Conference (ACSAC)</em>, 2003.    </li>
+    </ul>
+    <h4>Attack Diagnosis and Response</h4>
+    <ul>
+      <li><strong>Identifying and Analyzing Pointer Misuses for Sophisticated Memory-corruption Exploit Diagnosis</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ndss12.pdf">PDF</a>]<br />
+        Mingwei Zhang, Aravind Prakash, Xiaolei Li, Zhenkai Liang, and Heng Yin.<br />
+        In the 19th Annual Network &amp; Distributed System Security Symposium (NDSS), 2012.</li>
+      <li><strong>HookFinder: Identifying and Understanding Malware Hooking Behaviors</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ndss08.pdf">PDF</a>]<br />
+        <strong>Heng Yin, Zhenkai Liang, and Dawn Song.</strong><br />
+        In <em>the </em>1<em>5th Annual Network and Distributed System Security Symposium (NDSS)</em>,  2008. </li>
+      <li><strong>Fast and Automated Generation of Attack Signatures: A Basis for Building Self-Protecting Servers</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ccs05.pdf">PDF</a>]<br />
+        Zhenkai Liang and R. Sekar.<br />
+        In <em>the </em><em>12th ACM Conference on Computer and Communications Security (CCS)</em>, 2005.</li>
+    </ul>
+<h4>Web and browser security</h4>
+    <ul>
+      <li><strong>A Comprehensive Client-side Behavior Model for Diagnosing Attacks in Ajax Applications</strong>. Xinshu Dong, Kailas Patil, Jian Mao, and Zhenkai Liang. <br />
+        In the <em>18th International Conference on Engineering of Complex Computer Systems (ICECCS)</em>,  2013.</li>
       <li><strong>AdSentry: Comprehensive and Flexible Confinement of JavaScript-based Advertisements</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/acsac11.pdf">PDF</a>]<br />
         <strong>Xinshu Dong, Minh Tran, Zhenkai Liang, and Xuxian Jiang.</strong><br />
         In <em>the 27th Annual Computer Security Applications Conference (ACSAC)</em>,  2011.</li>
@@ -66,30 +96,17 @@ Singapore, 117417<br>
         <strong>Kailas Patil, Xinshu Dong, Xiaolei Li, Zhenkai Liang, and Xuxian Jiang.</strong><br />
         In <em>the 31st IEEE International Conference on Distributed Computing Systems (ICDCS)</em>,  2011.</li>
     </ul>
-<h4>Binary and system security</h4>
-<ul>
-  <li><strong>Codejail: Application-transparent Isolation of Libraries with Tight Program Interactions</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/esorics12.pdf">PDF</a>]<br />
-    <strong>Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai Liang.</strong> <br />
-    In the 17th European Symposium on Research in Computer Security (ESORICS), 2012.</li>
-  <li><strong>A Framework to Eliminate Backdoors from Response Computable Authentication</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ieee12.pdf">PDF</a>]<br />
-    <strong>Shuaifu Dai, Tao Wei, Chao Zhang, Tielei Wang, Yu Ding, Zhenkai Liang, and Wei Zou. </strong><br />
-    In the IEEE Symposium on Security and Privacy, 2012.</li>
-  <li><strong>Identifying and Analyzing Pointer Misuses for Sophisticated Memory-corruption Exploit Diagnosis</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ndss12.pdf">PDF</a>]<br />
-    Mingwei Zhang, Aravind Prakash, Xiaolei Li, Zhenkai Liang, and Heng Yin.<br />
-    In the 19th Annual Network &amp; Distributed System Security Symposium (NDSS), 2012.</li>
-  <li><strong>Fast and Automated Generation of Attack Signatures: A Basis for Building Self-Protecting Servers</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ccs05.pdf">PDF</a>]<br />
-    Zhenkai Liang and R. Sekar.<br />
-    In <em>the </em><em>12th ACM Conference on Computer and Communications Security (CCS)</em>, 2005.</li>
-  <li><strong>Isolated Program Execution: An Application Transparent Approach for Executing Untrusted Programs</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/acsac03.pdf">PDF</a>]<br />
-    <strong>(Outstanding paper award)</strong><br />
-    Zhenkai Liang, V.N. Venkatakrishnan, and R. Sekar.<br />
-    In <em>the 19th Annual Computer Security Applications Conference (ACSAC)</em>, 2003.    </li>
-</ul>
 <h4>Software debugging and testing</h4>
 <ul>
+  <li><strong>DARWIN: An Approach for Debugging Evolving Programs</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/tosem12.pdf">PDF</a>]<br />
+    <strong>Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, and Kapil Vaswani.</strong><br />
+    In ACM Transactions on Software Engineering and Methodology (TOSEM), Volume 21, Issue 3, 2012.</li>
+  <li><strong>Golden Implementation Driven Software Debugging</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/fse10.pdf">PDF</a>]<br />
+    <strong>Ansuman Banerjee, Abhik Roychoudhury, Johannes A. Harlie, and Zhenkai Liang</strong>.<br />
+    In <em>the ACM SIGSOFT 18th International Symposium on Foundations of Software Engineering (FSE)</em>,  2010.</li>
   <li><strong>DARWIN: An Approach for Debugging Evolving Programs</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/fse09.pdf">PDF</a>]<br />
     <strong>(Distinguished paper award)<br />
-    </strong>Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, Kapil Vaswani.<br />
+      </strong>Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, Kapil Vaswani.<br />
     In <em>the ESEC and ACM SIGSOFT Symposium on the Foundations of Software Engineering (ESEC-FSE</em>), 2009.</li>
   <li><strong>Towards Automatic Discovery of Deviations in Binary Implementations with Applications to Error Detection and Fingerprint Generation</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/sec07.pdf">PDF</a>]<br />
     <strong>(Best paper award)</strong><br />
@@ -98,7 +115,8 @@ Singapore, 117417<br>
 </ul>
     <p>
       <h3>Research awards. </h3>
-  </p>
+      <p></p>
+    </p>
     <p>
       <h3>Funding. </h3>
     </p>
